--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,20 @@
 		    <artifactId>ojdbc6</artifactId>
 		    <version>12.1.0.2</version>
 		</dependency>
+	
+	   <!--JSON-->
+	   <dependency>
+	       <groupId>com.fasterxml.jackson.core</groupId>
+	       <artifactId>jackson-databind</artifactId>
+	       <version>2.9.3</version>
+	   </dependency>
+	   
+	   <dependency>
+	       <groupId>org.codehaus.jackson</groupId>
+	       <artifactId>jackson-mapper-asl</artifactId>
+	       <version>1.9.13</version>
+	   </dependency>
+
 
 	</dependencies>
 	<!-- 오라클 세팅 -->
