--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,19 @@
        <version>1.9.13</version>
    </dependency>
 
+	<!-- Apache Commons FileUpload -->
+	<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.1</version>
+	</dependency>
+	<!-- Apache Commons IO -->
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.4</version>
+	</dependency>
+   
 	</dependencies>
 	<!-- 오라클 세팅 -->
 	<repositories>
