--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
 		</dependency>
 
 	<!--JSON-->
-   <dependency>
+  <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.9.3</version>
@@ -161,6 +161,19 @@
        <artifactId>jackson-mapper-asl</artifactId>
        <version>1.9.13</version>
    </dependency>
+
+   <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.9.3</version>
+   </dependency>
+   
+<!--    <dependency> -->
+<!--        <groupId>com.googlecode.json-simple</groupId> -->
+<!--        <artifactId>json-simple</artifactId> -->
+<!--        <version>1.1</version> -->
+<!--    </dependency> -->
+   
 
 	</dependencies>
 	<!-- 오라클 세팅 -->
