--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,18 @@
        <version>1.9.13</version>
    </dependency>
 
+   <dependency>
+   	<groupId>com.fasterxml.jackson.core</groupId>
+   	<artifactId>jackson-core</artifactId>
+   	<version>2.9.3</version>
+   </dependency>
+   
+   <dependency>
+	    <groupId>com.googlecode.json-simple</groupId>
+	    <artifactId>json-simple</artifactId>
+	    <version>1.1.1</version>
+	</dependency>
+   
 	</dependencies>
 	<!-- 오라클 세팅 -->
 	<repositories>
