--- a/pom.xml
+++ b/pom.xml
@@ -181,11 +181,65 @@
 		<version>2.9.4</version>
 	</dependency>
 	
-	<dependency>
-		<groupId>com.googlecode.json-simple</groupId>
-		<artifactId>json-simple</artifactId>
-		<version>1.1.1</version>
-	</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+
+		<dependency>
+
+			<groupId>com.cloudinary</groupId>
+
+			<artifactId>cloudinary-http44</artifactId>
+
+			<version>1.26.0</version>
+
+		</dependency>
+
+
+
+
+
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core -->
+
+		<dependency>
+
+			<groupId>com.cloudinary</groupId>
+
+			<artifactId>cloudinary-core</artifactId>
+
+			<version>1.26.0</version>
+
+		</dependency>
+
+	
+
+
+
+		<!-- 메일발송 -->
+
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+
+		<dependency>
+
+			<groupId>javax.mail</groupId>
+
+			<artifactId>javax.mail-api</artifactId>
+
+			<version>1.6.2</version>
+
+		</dependency>
+
+
+
+		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+
+		<dependency>
+
+			<groupId>javax.activation</groupId>
+
+			<artifactId>activation</artifactId>
+
+			<version>1.1.1</version>
+		</dependency>
 	
 	</dependencies>
 	<!-- 오라클 세팅 -->
